--- a/app/Resources/views/team/show.html.twig
+++ b/app/Resources/views/team/show.html.twig
@@ -30,8 +30,8 @@
                             <th>Nom</th>
                             <th>Code d'arrêt</th>                            
                             <th>Section</th>                            
-                            <th>Start Date</th>
-                            <th>End Date</th>
+                            <th>Début de l'arrêt</th>
+                            <th>Fin de l'arrêt</th>
                             <th>Composition</th>
                             <th>Editer</th>
                             <th>Modifier</th>
