--- a/app/Resources/views/agenda/agenda.html.twig
+++ b/app/Resources/views/agenda/agenda.html.twig
@@ -17,17 +17,12 @@
     <div class="bg-white my-3">
         <span class ="d-flex align-items-center justify-content-between">
             <span>
-                <button class="btn btn-outline-dark" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <span><i class="fas fa-search"></i></span><span class="mx-2">Parcourir</span>
-                </button>
-                {% if team %}
-                <a class="btn btn-outline-dark" href="{{ path('showPreviousAgenda', {'team_Id': team.id, 'previousDate': startDate|date("Y-m-d")}) }}">                                        
-                    <span><i class="fas fa-step-backward"></i></span> -15 j <span> </span>
-                </a>
-                <a class="btn btn-outline-dark" href="{{ path('showNextAgenda', {'team_Id': team.id, 'nextDate': endDate|date("Y-m-d")}) }}">                                        
-                    <span><i class="fas fa-step-forward"></i></span>+ 15 J <span> </span>
-                </a>
-                {% endif %}
+                {% if is_granted('ROLE_ADMIN') %}
+                    <button class="btn btn-outline-dark" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        <span><i class="fas fa-search"></i></span><span class="mx-2">Choisir une équipe</span>
+                    </button>                    
+                {% else %}                      
+                {% endif %}                               
             </span>                    
             <span id="buttonPrint">
             </span>
@@ -39,22 +34,19 @@
         <form action="{{ path('showAgenda') }}" method="post" class="form-control my-5 bg-menu shadow-lg" >
         {{ form_start(form) }}
 
-        <h3 class="my-5"> <span><i class="fas fa-search"></i></span><span> Parcourir un agenda</span></h3>
+        <h3 class="my-5"> <span><i class="fas fa-search"></i></span><span> Sélectionner une équipe</span></h3>
 
         <div class="mb-2 d-flex align-items-center justify-content-around ">
             {{ form_row(form.Team, {'label': ' ', 'attr' : {'placeholder':'Choisir une équipe ...', 'class':'custom-select d-block w-100' }}) }}
         {##"{{ form_row(form.interval, {'label': 'Période', 'attr' : {'placeholder':'Selectionnez une équipe ...' }}) }}#}
         </div>
-        <div class="mb-2 d-flex align-items-center justify-content-around bg-white rounded">
-            {{ form_row(form.interval, {'label': 'Choisir une durée', 'attr' : {'class':'form-check form-check-inline', 'type':'radio' }}) }}
-        </div>
+        
         <div class="mt-5 d-flex align-items-center justify-content-around ">
             <span>{{ form_row(form.Envoyer)}}</span>
         </div>
         <div class="d-flex align-items-center justify-content-end mr-1">
             <span data-toggle="collapse" data-target="#collapseExample" ><i class="fas fa-angle-up fa-3x"></i></span>
         </div>
-
 
         {{ form_rest(form) }}
         {{ form_rest(form) }}
