--- a/app/Resources/views/agenda/agendaTemp.html.twig
+++ b/app/Resources/views/agenda/agendaTemp.html.twig
@@ -1,7 +1,8 @@
     {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/b-1.5.4/b-colvis-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-1.5.0/sl-1.2.6/datatables.css"/>
+    
 {% endblock %}
 {% block title %}Agenda Brouillon{% endblock %}
 {% block body %}    
@@ -13,15 +14,7 @@
     <hr>      
     <div class="bg-white my-3">
         <span class ="d-flex align-items-center justify-content-between">
-            <span>                
-                {% if agent %}
-                <a class="btn btn-outline-dark" href="{{ path('showPreviousAgendaTemp', {'agent_Id': agent.id, 'previousDate': startDate|date("Y-m-d")}) }}">                                        
-                    <span><i class="fas fa-step-backward"></i></span> -15 j <span> </span>
-                </a>
-                <a class="btn btn-outline-dark" href="{{ path('showNextAgendaTemp', {'agent_Id': agent.id, 'nextDate': endDate|date("Y-m-d")}) }}">                                        
-                    <span><i class="fas fa-step-forward"></i></span>+ 15 J <span> </span>
-                </a>
-                {% endif %}
+            <span>
             </span>                    
             <span id="buttonPrint">
             </span>
@@ -184,9 +177,9 @@
 
 {% block javascripts %}
 <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/b-1.5.4/b-colvis-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-1.5.0/sl-1.2.6/datatables.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/configAgendaTemp.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/ajax.js"></script>
 {% endblock %}
