--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,17 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <!--font awesome - free - 5.7.2-web -->
-        <link rel="stylesheet" href="/assets/lib/fontawesome/css/all.css" rel="stylesheet"> 
-        
-         <!--Bootstrap - v 4.1.3 -->
-        <link rel="stylesheet" href="/assets/lib/bootstrap-4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        
-         <!--DataTables - v 4.1.3 -->
-        <link rel="stylesheet" type="text/css" href="/assets/lib/DataTables/datatables.css"/>
-        
-         <!--Style - v 4.1.3 -->
+        <link rel="stylesheet" href="/assets/lib/fontawesome/css/all.css">
+        <link rel="stylesheet" href="/assets/lib/bootstrap-4.0.0-dist/css/bootstrap.css">
         <link rel="stylesheet" href="/assets/css/styles.css">
+        <link href="/assets/css/datepicker.css" rel="stylesheet" type="text/css"/>
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         
         
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
@@ -117,10 +111,12 @@
             {% block body %}
             {% endblock %}            
         </div>
-        <script defer src="/assets/lib/fontawesome-free-5.7/js/all.js"></script>        
         <script src="/assets/lib/jquery-3.3.1.min.js"></script>
-        <script src="/assets/lib/DataTables/datatables.js"></script>
-        <script src="/assets/lib/bootstrap-4.1.3/js/bootstrap.min.js"></script>
+        <script src="/assets/lib/bootstrap-4.0.0-dist/js/bootstrap.js"></script>
+        <script src="/assets/lib/bootstrap-4.0.0-dist/js/bootstrap.bundle.js"></script>
+        <script src="assets/lib/popper.min.js"></script>
+
+
         {% block javascripts %}{% endblock %}        
     </body>
 </html>
