--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -115,6 +115,7 @@
         <script src="/assets/lib/bootstrap-4.0.0-dist/js/bootstrap.js"></script>
         <script src="/assets/lib/bootstrap-4.0.0-dist/js/bootstrap.bundle.js"></script>
         <script src="assets/lib/popper.min.js"></script>
+        <script src="/assets/lib/DataTables/datatables.js"></script>
 
 
         {% block javascripts %}{% endblock %}        
