--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,13 +3,19 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <!--FontAwesome -5.7.2-web -->
         <link rel="stylesheet" href="/assets/lib/fontawesome/css/all.css">
+
+        <!--Bootstrap - v 4.0.0 -->
         <link rel="stylesheet" href="/assets/lib/bootstrap-4.0.0-dist/css/bootstrap.css">
+
+        <!--Style - -->
         <link rel="stylesheet" href="/assets/css/styles.css">
-        <link href="/assets/css/datepicker.css" rel="stylesheet" type="text/css"/>
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        
-        
+
+        <!--DataTables - v 4.1.3 -->
+        <link rel="stylesheet" type="text/css" href="/assets/lib/DataTables/datatables.css"/>
+
+        <!--favicon - v 4.1.3 -->
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         {% block stylesheets %} {% endblock %}
     </head>
