--- a/app/Resources/views/agenda/agenda.html.twig
+++ b/app/Resources/views/agenda/agenda.html.twig
@@ -27,7 +27,7 @@
         </span>
     </div>
 </div>
-<div class="container bg-light">    
+<div class="container">
     <div class="col-md-8 offset-2 text-center collapse" id="collapseExample">
         <form action="{{ path('showAgenda') }}" method="post" class="form-control my-5 bg-menu shadow-lg" >
         {{ form_start(form) }}
